# ncappzoo

./: .Travis.yml  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAKEFILE_GUIDANCE.md  Makefile  OWNERS  README.md  install_deps.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Caffe/AgeNet/: Makefile  run.py
Caffe/AlexNet/: Makefile  run.py  synset_words.txt
Caffe/GenderNet/: Makefile  README.md  age_gender_mean.npy  images  run.py
Caffe/GoogLeNet/: Makefile  googlenet.prototxt  ilsvrc_2012_mean.npy  run.py  synset_words.txt
Caffe/SqueezeNet/: Makefile  stat.txt
apps/: Makefile  README.md
apps/MultiStick_GoogLeNet/: GoogLeNetOnCaffe.py  Makefile  MultiStick_GoogLeNet.py  MultiStick_GoogLeNet_Camera.py  README.md
apps/MultiStick_TF_Inception/: Makefile  MultiStick_Inception.py  python3-tk_dep_check.sh  readme.md
apps/age-gender/: age-gender.py
apps/benchmark_ncs/: Makefile  README.md  benchmark_ncs.py
apps/benchmarkncs/: Makefile  README.md  benchmarkncs.py  mobilenets_benchmark.sh
apps/birds/: AUTHORS  Makefile  README.md  birds.py  googlenet_processor.py  tiny_yolo_processor.py
apps/chef_ai/: Makefile  README.md  chef_ai_server.py
apps/chef_app/: Makefile  README.md  chef_ai_server.py  chef_backend_startup.sh  openvino_backend.py
apps/classifier-gui/: AUTHORS  Makefile  README.md  classifier-gui.py  readme.md
apps/classifier_flash/: Makefile  README.md  classifier_flash.py
apps/classifier_grid/: Makefile  README.md  canvas.py  classifier_grid.py
apps/classifier_gui/: AUTHORS  Makefile  README.md  classifier_gui.py
apps/dogsvscats/: Makefile  README.md  create-labels.py  create-lmdb.sh
apps/driving_pi/: AUTHORS  Makefile  README.md  car_pi.py  driving_pi.py  lane_detector.py  maps.py  video_cam.py
apps/face_detect_matcher/: Makefile  README.md  face_detect_matcher.py
apps/face_emotion_game/: Makefile  README.md  face_emotion_game.py  help.txt
apps/gender_age/: AUTHORS  CMakeLists.txt  Makefile  README.md
apps/gender_age_lbp/: CMakeLists.txt  Makefile  README.md  build.sh  compile.sh  readme.md
apps/gender_age_lbp/LICENSES/: numpy.txt  stb_image.txt
apps/gender_age_lbp/catstat/Age/: categories.txt
apps/gender_age_lbp/cpp/: fp16.cpp  fp16.h  gender_age_lbp.cpp
apps/gender_age_lbp/networks/Age/: deploy_age.prototxt
apps/gender_age_lbp/networks/Gender/: gender_net.prototxt
apps/gesture_piarm/: AUTHORS  Makefile  README.md  download_ir_model.py  gesture_ssd_async.py  gesture_ssd_async_wout_robot.py  mearm_control.py  mearm_pi.py  servo.py
apps/hello_ncs_cpp/: AUTHORS  Makefile  readme.md
apps/hello_ncs_py/: Makefile  README.md  hello_ncs.py  hello_ncs_api2.py
apps/image-classifier/: Makefile  README.md  image-classifier.py  readme.md
apps/live-image-classifier/: Makefile  README.md  live-image-classifier-pi-camera.py  live-image-classifier.py  readme.md
apps/live-image-classifier-PiCam/: .Makefile.swp  AUTHORS.txt  Makefile  README.md  live-image-classifier-PiCam.py  live-image-classifier-picam.py
apps/live-object-detector/: Makefile  README.md  live-object-detector.py
apps/log-image-classifier/: Makefile  README.md  log-image-classifier.py  readme.md
apps/mnist_calc/: AUTHORS  Makefile  README.md  calcui.py  camcalc.py  cameraprocessor.py  mnist_calc.py  mnist_processor.py  touchcalc.py
apps/mobile-ssd-voc-10class/: Makefile  README.md  ssd-object-detector.py
apps/multistick_cpp/: Makefile  README.md  readme.md
apps/ncs_digital_sign/: AUTHORS  CMakeLists.txt  Makefile  README.md
apps/ncs_digital_sign/advertisement_images/: licenses.txt
apps/ncs_digital_sign/cpp/: run.cpp
apps/object-detector/: AUTHORS  Makefile  README.md  object-detector.py
apps/rapid-image-classifier/: Makefile  README.md  rapid-image-classifier.py  readme.md
apps/realsense_object_distance_detection/: CMakeLists.txt  Makefile  README.md
apps/realsense_person_distance_detection/: AUTHORS  CMakeLists.txt  Makefile  README.md
apps/realsense_segmentation/: CMakeLists.txt  Makefile  README.md  seg_labels.txt
apps/realsense_segmentation/cpp/: run.cpp
apps/realtime-image-classifier/: Makefile  readme.md  realtime-image-classifier.py
apps/security-cam/: Makefile  README.md  security-cam.py  security-picam.py
apps/simple_classifier/: CMakeLists.txt  Makefile  run.cpp
apps/simple_classifier_cpp/: AUTHORS  CMakeLists.txt  Makefile  README.md  run.cpp
apps/simple_classifier_cpp_camera/: AUTHORS  CMakeLists.txt  Makefile  README.md  run.cpp
apps/simple_classifier_py/: Makefile  README.md  run.py
apps/simple_classifier_py_camera/: Makefile  README.md  run.py
apps/ssd-object-detector/: Makefile  README.md  ssd-object-detector.py
apps/stream_infer/: Makefile  README.md  gendernet_stat.txt  readme.md  squeezenet_categories.txt  stream_infer.py
apps/stream_ty_gn/: Makefile  README.md  install-opencv-from_source.sh  stream_ty_gn.py
apps/stream_ty_gn_threaded/: Makefile  README.md  camera_processor.py  googlenet_processor.py  install-opencv-from_source.sh  stream_ty_gn_threaded.py  tiny_yolo_processor.py
apps/street_cam/: Makefile  README.md  street_cam.py
apps/street_cam_threaded/: Makefile  README.md  googlenet_processor.py  street_cam_threaded.py  tiny_yolo_processor.py  video_processor.py
apps/topcoder_cjalmeida/: inception_v4.py  nasnet.py
apps/topcoder_example/: Makefile  README.md  network.prototxt  provisional.csv
apps/topcoder_fsadu/: README.md  eval.py  freeze_graph.py  requirements.txt
benchmarkncs/: Makefile  benchmarkncs.py
caffe/: Makefile  README.md
caffe/AgeNet/: Makefile  (+2 more)
data/: Makefile  README.md
docs/: 404.html  CNAME  Gemfile  README.md  _config.yml  about.md  arch.md  c_api.md  forum.md  index.md  install.md  python_api.md  tools.md  troubleshooting.md
hello_ncs/: hello_ncs.py  readme.md
ncapi2_shim/: Makefile  README.md  mvnc_simple_api.py
networks/: Makefile  README.md
omz/: Makefile  README.md
shared/: Makefile  README.md
tensorflow/: Makefile  README.md  readme.md
tools/: readme.md
(+483 files in other folders)
